🐛 fixed styling problems causing overflow

--- a/src/style.css
+++ b/src/style.css
@@ -20,5 +20,5 @@ html {
   height: 100vh;
   margin: 0;
   transition: background-color 0.2s;
-  overflow: hidden;
+  overflow: hidden !important;
 }
